Create Users when setting up OT&E and Production registrars (#2488)